--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,190 +1,10 @@
 @import "partials/setup";
+@import "partials/variables";
+@import "partials/main";
+@import "partials/questions";
 @import "partials/submit-buttons";
 @import "partials/test-buttons";
+@import "partials/slots";
 
-$primaryColour: mediumpurple;
-$secondaryColour: hotpink;
-$tertiaryColour: white;
 
-body {
-	font-family: 'Ubuntu', sans-serif;
-	background: linear-gradient( to bottom right, #ff00ff, 	#ba55d3, #9370db, #7b68ee, #644ccc);
-}
 
-.wrapper {
-	width: 70%;	
-	margin: 0 auto;
-}
-
-main {
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
-	margin-top: 10%;
-}
-
-h1, h2, h3 {
-	text-align: center;
-	font-family: 'Lemon', cursive;
-}
-
-h1, h2 {
-	color: white;
-	letter-spacing: 2px;
-	font-size: 20px;
-	text-shadow: 2px 2px hotpink;
-}
-
-h3 {
-	color: #584383;
-	font-size: 35px;
-	letter-spacing: 2px;
-}
-
-header {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
-	h1 {
-		font-size: 22px;
-		max-width: 80%;
-		margin: 0 auto;
-		margin-top: 2%;
-	}
-}
-
-.logo-image { //logo
-	margin-top: 5%;
-	text-align: center;
-}
-
-.bubble { //section backgrounds
-	border-radius: 30px;
-	background-color: rgba(255,255,255,.5);
-}
-
-.bTwo { //second section bubble
-	margin-top: 5%;
-}
-
-.swears-form-container {
-	width: 100%;
-}
-
-.submit-container { //sweeten me
-	text-align: center;
-	margin: 5%;
-}
-
-.resultsPadding { //sweeten me results
-	text-align: center;
-	position: relative;
-	padding-bottom: 50px;
-}
-
-.choice-appears { //appended test results from JS
-	color: $tertiaryColour;
-	position: absolute;
-	bottom: 20px;
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-.border-background { //slots machine BG
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
-	width: 80%;
-	border-radius: 30px;
-	margin: 0 auto;
-	margin-top: 4%;
-	height: 300px;
-	background: repeating-linear-gradient(
-	  45deg,
-	  hotpink,
-	  #606dbc 10px,
-	  #465298 10px,
-	  #465298 20px
-	);
-}
-
-.slotContainer { //inner slots background
-  background-color: white;
-  margin: 0 auto;
-  width: 90%;
-  height: 250px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-radius: 30px;
-}
-
-.slotInset {
-	width: 33.3%;
-}
-
-.slotInset img {
-	max-width: 100%;
-}
-
-.slotResultsStyle { //appended from JS
-	text-align: center;
-	font-family: 'Lemon', cursive;
-	letter-spacing: 2px;
-	font-size: 20px;
-}
-
-input {
-	visibility: hidden;
-	display: block;
-}
-
-footer {
-	color: #584383;
-	margin: 2%;
-	text-align: center;
-		a {
-			text-decoration: none;
-			color: #584383;
-		}
-}
-
-//Portrait tablet and small desktops 
-@media (max-width: 940px) {
-
-}
-
-/* Landscape phone to portrait tablet */
-@media (max-width: 768px) {
-
-	.logo-image img { //logo
-		width: 90%;
-	}
-
-	.border-background { //slots machine BG
-		height: 200px;
-	}
-
-	.slotContainer { //inner slots background
-	  height: 150px;
-	}
-
-	.bTwo {
-			margin-bottom: 5%;
-		}
-}
-
-/* Landscape phones and down */
-@media (max-width: 480px) {
-	.border-background { //slots machine BG
-		height: 150px;
-	}
-
-	.slotContainer { //inner slots background
-	  height: 120px;
-	}
-}
