--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -14,7 +14,21 @@ main {
 	flex-direction: column;
 	align-content: center;
 	justify-content: center;
-	margin-top: 10%;
+	margin-top: 3%;
+}
+
+header {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	justify-content: center;
+	h1 {
+		font-size: 22px;
+		max-width: 80%;
+		margin: 0 auto;
+		margin-top: 2%;
+	}
 }
 
 h1, h2, h3 {
@@ -33,20 +47,6 @@ h3 {
 	color: #584383;
 	font-size: 35px;
 	letter-spacing: 2px;
-}
-
-header {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-content: center;
-	justify-content: center;
-	h1 {
-		font-size: 22px;
-		max-width: 80%;
-		margin: 0 auto;
-		margin-top: 2%;
-	}
 }
 
 .logo-image { //logo
@@ -72,18 +72,64 @@ footer {
 //Portrait tablet and small desktops 
 @media (max-width: 940px) {
 
+	header {
+		h1 {
+			max-width: 90%;
+		}
+	}
+
+	h3 {
+		font-size: 25px;
+	}
+
+	.logo-image img { 
+		width: 90%;
+	}
+
+	footer {
+		margin: 6%;
+	}
 }
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-
-	.logo-image img { //logo
-		width: 90%;
+	
+	.wrapper {
+		width: 80%;
 	}
 
+	.logo-image img { 
+		width: 75%;
+	}
+
+	header {
+		h1 {
+			max-width: 93%;
+		}
+	}
+}
+
+@media (max-width: 655px) {
+	h3 {
+		font-size: 18px;
+	}
 }
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
+	
+	.wrapper {
+		width: 90%;
+	}
+}
 
+@media (max-width: 386px) {
+	header {
+		h1 {
+			font-size: 16px;
+		}
+	}
+	h3 {
+		font-size: 12px;
+	}
 }
