--- a/scss/partials/_submit-buttons.scss
+++ b/scss/partials/_submit-buttons.scss
@@ -2,11 +2,12 @@
 // Submit Button styles for test and slots
 button {
   background: none;
+  background-color: rgba(255,255,255,0.75);
   border: 0;
   box-sizing: border-box;
   margin: 1em;
   padding: 1em 2em;
-  width: 40%;
+  width: 50%;
   
   // Using inset box-shadow instead of border for sizing simplicity
   box-shadow: inset 0 0 0 4px $secondaryColour;
@@ -85,9 +86,41 @@ button {
 
 .buttonContainer { //holds the GO button
   text-align: center;
-  margin-bottom: 5%;
-  margin-top: 5%;
+  margin: 5% 0;
 }
 
+@media (max-width: 940px) {
 
+  .buttonContainer {    
+    margin: 5% 0;
+  }
+  
+  .go {
+    margin: 0;
+  }
+}
 
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+  
+  .go {
+    margin-bottom: 5%;
+  }
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+  .buttonContainer {
+    margin: 5% 0 2% 0;
+  }
+}
+
+@media (max-width: 420px) {
+  
+  .wrapper {
+    width: 98%;
+  }
+  button {
+    width: 70%;
+  }
+}
